--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
