--- a/node-back/package.json
+++ b/node-back/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.1",
     "string-random": "^0.1.3"
   }
 }
