--- a/vue-front/package.json
+++ b/vue-front/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "swall": "^0.0.2",
+    "sweetalert": "^2.1.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
