--- a/vue-front/package.json
+++ b/vue-front/package.json
@@ -19,10 +19,14 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "maz-ui": "^2.4.7",
     "swall": "^0.0.2",
     "sweetalert": "^2.1.2",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.22",
+    "vue-phone-number-input": "^1.12.13",
+    "vue-router": "^3.0.1",
+    "vue-tel-input": "^8.1.1",
+    "vue-tel-input-fix": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -30,6 +34,7 @@
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
