--- a/vue-front/package.json
+++ b/vue-front/package.json
@@ -19,6 +19,9 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "maz-ui": "^2.4.7",
     "swall": "^0.0.2",
     "sweetalert": "^2.1.2",
