--- a/vue-front/package.json
+++ b/vue-front/package.json
@@ -26,6 +26,7 @@
     "swall": "^0.0.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
+    "vee-validate": "^2.2.15",
     "vue": "^2.5.22",
     "vue-phone-number-input": "^1.12.13",
     "vue-router": "^3.0.1",
